criacao rota calculadora e implementacao do video

--- a/views/home.html
+++ b/views/home.html
@@ -23,6 +23,7 @@
 
         <div class="project-container">
             <h2>Portfólio</h2>
+            <img class="icon-link" src="/images/icon.jpeg" alt="icon-link" >
 
             <h3 class="title">Search Name and Avatar</h3>
 
@@ -37,6 +38,7 @@
         </div>
         <div class="project-container">
             <h3 class="title">Calculadora</h3>
+            <img class="icon-link" src="/images/icon.jpeg" alt="icon-link" >
 
             <img src="/images/calculator.jpeg" alt="calculadora" class="image">
 
@@ -49,6 +51,7 @@
         </div>
         <div class="project-container">
             <h3 class="title">To Do List</h3>
+            <img class="icon-link" src="/images/icon.jpeg" alt="icon-link" >
 
             <img src="/images/toDo.png" alt="toDo-List" class="image">
 
@@ -60,8 +63,9 @@
         </div>
         <div class="project-container">
             <h3 class="title">Coffee Shop</h3>
+            <img class="icon-link" src="/images/icon.jpeg" alt="icon-link" >
 
-            <span class="image">[Video ilustrativo]</span>
+            <img src="/images/CoffeShop.png" alt="Coffee-Shop" class="image">
 
             <p class="legenda">Trabalho da faculdade. Projeto de uma cafeteria online utilizando rotas Express, contém uma rota de login (usuario e senha pré-definidos), uma rota com a home inicial, rota com o cardápio de café e sobremesa, juntamente com uma rota para cada visualização de item, e a possibilidade de adicionar em seu carrinho. Esse projeto está com alguns erros e o código bem sujo, por ter sido os primeiros contatos com uma nova tecnologia</p>
             <span>Linguagem(s) utilizada(s): JavaScript, HTML, CSS e BootStrap, NodeJS e Express</span>
@@ -71,6 +75,7 @@
         </div>
         <div class="project-container">
             <h3 class="title">Coffee Menu</h3>
+            <img class="icon-link" src="/images/icon.jpeg" alt="icon-link" >
 
             <img src="/images/coffe-menu.png" alt="coffe-menu" class="image">
 
@@ -84,7 +89,8 @@
             <h3 class="title">Agenda</h3>
             <img class="icon-link" src="/images/icon.jpeg" alt="icon-link" >
 
-            <span class="image">[Video ilustrativo]</span>
+            <img src="/images/agenda.png" alt="prova" class="image">
+
 
             <p class="legenda">Atividade da disciplina de Estrutura de Dados. Consiste em uma agenda com as funcionalidades de adição de contato, pesquisa, exclusão e listagem dos contatos, com seus respectivos tratamentos de erros.</p>
             <span>Linguagem(s) utilizada(s): Java</span>
@@ -94,8 +100,9 @@
         </div>
         <div class="project-container">
             <h3 class="title">Prova</h3>
+            <img class="icon-link" src="/images/icon.jpeg" alt="icon-link" >
 
-            <span class="image">[Video ilustrativo]</span>
+            <img src="/images/prova.png" alt="prova" class="image">
 
             <p class="legenda">Pequeno programa em Java que simula a aplicação de uma prova, verificando se as respostas estão corretas e aplicando uma nota ao aluno </p>
             <span>Linguagem(s) utilizada(s): Java</span>
