--- a/views/home.html
+++ b/views/home.html
@@ -20,10 +20,10 @@
 
     <div class="container">
 
-
+        <h2>Portfólio</h2>
         <div class="project-container">
-            <h2>Portfólio</h2>
-            <img class="icon-link" src="/images/icon.jpeg" alt="icon-link" >
+
+            <a href="/search"><img class="icon-link" src="/images/iconlink.png" alt="icon-link" ></a>
 
             <h3 class="title">Search Name and Avatar</h3>
 
@@ -38,7 +38,8 @@
         </div>
         <div class="project-container">
             <h3 class="title">Calculadora</h3>
-            <img class="icon-link" src="/images/icon.jpeg" alt="icon-link" >
+
+            <a href="/calculadora"><img class="icon-link" src="/images/iconlink.png" alt="icon-link" autofocus></a>
 
             <img src="/images/calculator.jpeg" alt="calculadora" class="image">
 
@@ -51,7 +52,7 @@
         </div>
         <div class="project-container">
             <h3 class="title">To Do List</h3>
-            <img class="icon-link" src="/images/icon.jpeg" alt="icon-link" >
+            <a href="/todolist"><img class="icon-link" src="/images/iconlink.png" alt="icon-link"></a>
 
             <img src="/images/toDo.png" alt="toDo-List" class="image">
 
@@ -63,7 +64,7 @@
         </div>
         <div class="project-container">
             <h3 class="title">Coffee Shop</h3>
-            <img class="icon-link" src="/images/icon.jpeg" alt="icon-link" >
+            <a href="/coffeshop"><img class="icon-link" src="/images/iconlink.png" alt="icon-link" ></a>
 
             <img src="/images/CoffeShop.png" alt="Coffee-Shop" class="image">
 
@@ -75,7 +76,7 @@
         </div>
         <div class="project-container">
             <h3 class="title">Coffee Menu</h3>
-            <img class="icon-link" src="/images/icon.jpeg" alt="icon-link" >
+            <a href="/coffemenu"><img class="icon-link" src="/images/iconlink.png" alt="icon-link"></a>
 
             <img src="/images/coffe-menu.png" alt="coffe-menu" class="image">
 
@@ -87,7 +88,7 @@
         </div>
         <div class="project-container">
             <h3 class="title">Agenda</h3>
-            <img class="icon-link" src="/images/icon.jpeg" alt="icon-link" >
+            <a href="/agenda"><img class="icon-link" src="/images/iconlink.png" alt="icon-link"></a>
 
             <img src="/images/agenda.png" alt="prova" class="image">
 
@@ -100,7 +101,7 @@
         </div>
         <div class="project-container">
             <h3 class="title">Prova</h3>
-            <img class="icon-link" src="/images/icon.jpeg" alt="icon-link" >
+            <a href="/prova"><img class="icon-link" src="/images/iconlink.png" alt="icon-link" ></a>
 
             <img src="/images/prova.png" alt="prova" class="image">
 
