--- a/views/search.html
+++ b/views/search.html
@@ -7,6 +7,15 @@
     <title>Search Name and Avatar</title>
 </head>
 <body>
+    <div class="container">
 
+        <div class="video-container">
+            <h1>Search-name-and-avatar</h1>
+            <video class="video" src="/videos/calculadoraVideo.mkv" controls>
+                Seu navegador não suporta a tag de vídeo.
+
+            </video>
+        </div>
+    </div>
 </body>
 </html>
