--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -39,7 +39,8 @@ span {
 }
 
 .image {
-    width: 65vh;
+    /* width: 65vh; */
+    width: 80%;
     height: 40vh;
     border-radius: 20px;
 }
@@ -57,9 +58,9 @@ span {
 .icon-link {
     width: 30px;
     position: absolute;
-    top: 10px;
-    right: 10px;
-    height: 30px;
+    top: 15px;
+    right: 15px;
+    height: 25px;
 }
 .info {
     display: flex;
