--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@100&family=Unbounded&display=swap');
 body {
-    background-color: rgb(211, 139, 5);
-    color: white;
+    background-color: rgb(5, 211, 194);
+    color: rgb(0, 0, 0);
     font-weight: bold;
     font-family: 'Chivo Mono';
 
@@ -24,7 +24,7 @@ span {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgb(87, 18, 18);
+    background-color: rgb(6, 66, 61);
     width: 40em;
     padding: 5px 10px;
     border-radius: 25px;
@@ -47,7 +47,7 @@ span {
 
 .link {
     font-weight: bold;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     padding-bottom: 10px;
 }
 
@@ -67,11 +67,13 @@ span {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    border: 2px solid rgb(158, 104, 5);;
+    border: 1px solid rgb(5, 41, 158);;
     height: 45vh;
+    max-width: 100;
     margin: 10px;
     margin-right: 50vh;
     margin-left: 50vh;
+    border-radius: 50px;
 }
 .info h1{
     font-size: 20px;
