--- a/views/prova.html
+++ b/views/prova.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/stylesProjects.css">
     <title>Prova</title>
 </head>
 <body>
@@ -11,7 +12,7 @@
 
         <div class="video-container">
             <h1>Prova</h1>
-            <video class="video" src="/videos/calculadoraVideo.mkv" controls>
+            <video class="video" src="/videos/ProvaVideo.mkv" controls>
                 Seu navegador não suporta a tag de vídeo.
 
             </video>
