--- a/public/css/stylesProjects.css
+++ b/public/css/stylesProjects.css
@@ -2,7 +2,7 @@ body {
     background-color: rgb(5, 211, 194);
     color: white;
     font-weight: bold;
-    font-family: 'Chivo Mono';
+    font-family:Arial, Helvetica, sans-serif
 
 }
 .container {
