--- a/views/secretword.html
+++ b/views/secretword.html
@@ -5,18 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/stylesProjects.css">
-    <title>Search Name and Avatar</title>
+    <title>Secret Word</title>
 </head>
 <body>
     <div class="container">
 
         <div class="video-container">
-            <h1>Search-name-and-avatar</h1>
-            <video class="video" src="/videos/searchVideo.mkv" controls>
+            <h1>Secret Word</h1>
+            <video class="video" src="/videos/secretWord.mp4" controls>
                 Seu navegador não suporta a tag de vídeo.
+
             </video>
-            
-        
         </div>
     </div>
 </body>
